added func save delete

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Saakh",
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "fs": "^0.0.1-security"
   }
 }
